# gunz-utils

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  JULES.md  LICENSE.md  README.md  TASKS.md  TASKS.md.bak  debug_enum.py  pyproject.toml
.github/workflows/: ci.yml  deploy_docs.yml
.jules/: bolt.md  sentinel.md
.wrangler/cache/: pages.json  wrangler-account.json
benchmarks/security/: bench_sanitize_filename.py
docs/: TASKS.md  TASKS_ARCHIVE.md  conf.py  index.rst
docs/_build/html/: .buildinfo  api.html  concepts.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  concepts.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/.doctrees/__intersphinx_cache__/: gunz_cm_objects.inv  gunz_ml_objects.inv
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/gunz_utils/: enums.html  validation.html
docs/_build/html/_sources/: concepts.md.txt  index.rst.txt
docs/design/adr/: 0001-workspace-initialization.md
docs/design/assets/: README.md
docs/design/definitions/: enums.yaml  secure_store.yaml  security.yaml  upstream_protocol.yaml  validation.yaml
docs/source/: api.rst  concepts.md  conf.py  installation.md  quickstart.md
docs/tasks/active/: 2026-04-28-gunz_utils-docs_improvement.md  2026-04-28-gunz_utils-python-v6_0-compliance.md  2026-04-28-gunz_utils-test_improvements.md  2026-07-16-docs-pipeline-repair.md
docs/tasks/done/: 2025-02-18-security-add_safe_path_join.md  2025-02-18-security-fix_reserved_filename_replacement.md  2025-10-18-enums-perf_optimize_fuzzy_lookup.md  2026-04-28-gunz_utils-docs_improvement.md  2026-04-28-gunz_utils-test_improvements.md  2026-07-01-build-deps_split_v1.3.0.md  2026-07-15-protocol-tier1_cleanup_housekeeping.md
docs/templates/: TASK_GENERAL.md  TASK_PROGRAMMER.md  TASK_RESEARCHER.md
guides/: agent-tasks.md  bash.md  cmake.md  creating_new_hpo.md  iso_document.md  latex.md  python-security.md  python.md  python_cli.md
scripts/: build_docs.sh  ci.py
src/gunz_utils/: __init__.py  enums.py  models.py  project.py  secure_store.py  security.py  upstream_protocol.py  validation.py
src/gunz_utils/ext/: __init__.py  observability_loguru.py  project_gitpython.py  project_stdlib.py  secure_crypto.py  validation_pydantic.py  validation_stdlib.py
tasks/: fix_ci_system_error.md  optimize_enum_access.md  security_reserved_filenames.md  task_001_fix_windows_reserved_filenames.md
tasks/done/: 2025-02-18-dos-protection-enum.md  2025-12-24-prevent-validation-leakage.md
tests/: test_enums.py  test_enums_security.py  test_project.py  test_secure_store.py  test_security.py  test_security_reserved.py  test_validation.py  test_validation_leak.py
tests/test_core/: test_enums_security.py  test_security_reserved.py
tests/test_ext_stdlib/: test_ext_stdlib.py
tests/test_project/: test_project.py
tests/test_secure/: test_secure_store.py
tests/test_validation/: test_validation.py  test_validation_leak.py
