[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gunz-utils"
version = "1.1.0"
description = "General purpose utilities for Python projects"
authors = [
  { name = "Yeremia Gunawan Adhisantoso", email = "adhisant@tnt.uni-hannover.de" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "gitpython>=3.1.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
validation = ["pydantic>=2.0.0"]
project = ["gitpython>=3.1.0", "loguru>=0.7.0"]
observability = ["loguru>=0.7.0"]
secure = ["cryptography>=42.0.0"]
all = [
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "gitpython>=3.1.0",
    "loguru>=0.7.0",
]
docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints",
]

[project.urls]
"Homepage" = "https://github.com/sXperfect/gunz-utils"
"Bug Tracker" = "https://github.com/sXperfect/gunz-utils/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gunz_utils"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
