[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gunz-utils"
version = "1.3.0"
description = "General purpose utilities for Python projects"
authors = [
  { name = "Yeremia Gunawan Adhisantoso", email = "adhisant@tnt.uni-hannover.de" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "gitpython>=3.1.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
validation = ["pydantic>=2.0.0"]
project = ["gitpython>=3.1.0", "loguru>=0.7.0"]
observability = ["loguru>=0.7.0"]
secure = ["cryptography>=42.0.0"]
all = [
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "gitpython>=3.1.0",
    "loguru>=0.7.0",
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
]

[project.urls]
"Homepage" = "https://github.com/sXperfect/gunz-utils"
"Bug Tracker" = "https://github.com/sXperfect/gunz-utils/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gunz_utils"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

# --- Ruff (linter + formatter) ----------------------------------------------
# AGENTS.md §2.6 mandates Ruff for lint + format.
[tool.ruff]
# Project requires Python 3.11+.
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# F (Pyflakes) + E/W (pycodestyle) + I (isort) + UP (pyupgrade) + B (bugbear)
select = ["F", "E", "W", "I", "UP", "B"]
# Allow assert in tests; the security guide forbids assert in production code,
# so we tighten with a per-file override below.
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to use `assert` (the unittest idiom) and re-export
# private helpers from src/ via leading-underscore imports.
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
